--- a/WpfApp1/Views/OverlayControl.xaml
+++ b/WpfApp1/Views/OverlayControl.xaml
@@ -1,19 +1,14 @@
 ﻿<UserControl x:Class="WpfApp1.Views.OverlayControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfApp1.Views"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:WpfApp1.ViewModels"
              mc:Ignorable="d" 
              d:DataContext="{d:DesignInstance Type=viewModels:OverlayViewModel, IsDesignTimeCreatable=True}"
              d:DesignHeight="300" d:DesignWidth="300">
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="*"/>
-		</Grid.RowDefinitions>
-		<ScrollViewer VerticalScrollBarVisibility="Auto">
+	<DockPanel>
+		<ScrollViewer DockPanel.Dock="Top" VerticalScrollBarVisibility="Auto">
 			<ItemsControl ItemsSource="{Binding Items}">
 				<ItemsControl.ItemsPanel>
 					<ItemsPanelTemplate>
@@ -29,10 +24,11 @@
 				</ItemsControl.ItemTemplate>
 			</ItemsControl>
 		</ScrollViewer>
-		<Border Grid.Row="1" Background="Gray" Opacity="0.8">
+
+		<Border Background="Gray" Opacity="0.8">
 			<Border.InputBindings>
 				<MouseBinding MouseAction="LeftClick" Command="{Binding Hide}"/>
 			</Border.InputBindings>
 		</Border>
-	</Grid>
+	</DockPanel>
 </UserControl>
