--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -18,7 +18,7 @@
 				<ColumnDefinition Width="Auto"/>
 				<ColumnDefinition Width="*"/>
 			</Grid.ColumnDefinitions>
-			<Button Command="{Binding ToggleOverlay}" Margin="5">Переключить оверлей</Button>
+			<Button Command="{Binding Overlay.Toggle}" Margin="5">Переключить оверлей</Button>
 		</Grid>
 		<TextBlock Grid.Row="1" TextWrapping="Wrap" Margin="5">
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus a facilisis enim. Donec tempor, felis vitae sagittis gravida, nisl massa porta turpis, sed finibus elit tortor at nibh. Morbi pulvinar id lacus et semper. Sed mollis diam ac mattis ultricies. Vestibulum eget mollis erat, id scelerisque eros. Nullam posuere sollicitudin lacus, venenatis egestas lorem commodo a. Vestibulum feugiat luctus leo, ut imperdiet turpis efficitur sit amet. Praesent posuere ligula justo, in dictum elit eleifend eu.
@@ -36,7 +36,7 @@ Nulla erat lorem, commodo at magna eget, pretium porta sem. Mauris viverra tellu
 				<Style TargetType="Border">
 					<Setter Property="Visibility" Value="Collapsed"/>
 					<Style.Triggers>
-						<DataTrigger Binding="{Binding IsOverlayShown}" Value="True">
+						<DataTrigger Binding="{Binding Overlay.IsShown}" Value="True">
 							<Setter Property="Visibility" Value="Visible"/>
 						</DataTrigger>
 					</Style.Triggers>
